--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "style-loader",
+  "name": "style-with-extract-loader",
   "version": "4.0.0",
-  "description": "style loader module for webpack",
+  "description": "Base on style-loader, which also extracts style content to files. Developed for web page record and replay optimization.",
   "license": "MIT",
-  "repository": "webpack-contrib/style-loader",
+  "repository": "Sheetaa/style-with-extract-loader",
   "author": "Tobias Koppers @sokra",
-  "homepage": "https://github.com/webpack-contrib/style-loader",
-  "bugs": "https://github.com/webpack-contrib/style-loader/issues",
-  "funding": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/webpack"
-  },
+  "homepage": "https://github.com/Sheetaa/style-with-extract-loader",
+  "bugs": "https://github.com/Sheetaa/style-with-extract-loader/issues",
   "main": "dist/cjs.js",
   "engines": {
     "node": ">= 18.12.0"
